# cmd/web.go
@@ -6,6 +6,7 @@ package cmd
 import (
 	"github.com/amirdaaee/TGMon/internal/config"
 	"github.com/amirdaaee/TGMon/internal/web"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/sirupsen/logrus"
 	"github.com/spf13/cobra"
@@ -35,28 +36,44 @@ var webCmd = &cobra.Command{
 		jobResFacade := buildJobResFacade(dbContainer)
 		ll.Info("media facade built")
 		// ...
+		hCfg := config.Config().HttpConfig
 		g := gin.Default()
+		coresCfg := cors.DefaultConfig()
+		if len(hCfg.CoresAllowed) > 0 {
+			coresCfg.AllowOrigins = hCfg.CoresAllowed
+		} else {
+			coresCfg.AllowAllOrigins = true
+		}
+		coresCfg.AddAllowHeaders("Authorization")
+		g.Use(cors.New(coresCfg))
 		streamHandler := web.NewStreamHandler(dbContainer, mediafacade, wp)
-		mediaHandler := web.MediaHandler{}
+		mediaHandler := web.MediaHandler{DBContainer: dbContainer}
 		jobReqHandler := web.JobReqHandler{}
 		jobResHandler := web.JobResHandler{}
 		infoHandler := web.InfoApiHandler{
 			MediaFacade: mediafacade,
 		}
 		loginHandler := web.LoginApiHandler{
-			UserName: config.Config().UserName,
-			UserPass: config.Config().UserPass,
-			Token:    config.Config().ApiToken,
+			UserName: hCfg.UserName,
+			UserPass: hCfg.UserPass,
+			Token:    hCfg.ApiToken,
+		}
+		sessionHandler := web.SessionApiHandler{
+			Token: hCfg.ApiToken,
+		}
+		randomMediaHandler := web.RandomMediaApiHandler{
+			MediaFacade: mediafacade,
 		}
 		hndlrs := web.HandlerContainer{
-			MediaHandler:  web.NewCRDApiHandler(&mediaHandler, mediafacade, "media"),
-			JobReqHandler: web.NewCRDApiHandler(&jobReqHandler, jobReqFacade, "jobReq"),
-			JobResHandler: web.NewCRDApiHandler(&jobResHandler, jobResFacade, "jobRes"),
-			InfoHandler:   web.NewApiHandler(&infoHandler, "info"),
-			LoginHandler:  web.NewApiHandler(&loginHandler, "login"),
+			MediaHandler:       web.NewCRDApiHandler(&mediaHandler, mediafacade, "media"),
+			JobReqHandler:      web.NewCRDApiHandler(&jobReqHandler, jobReqFacade, "jobReq"),
+			JobResHandler:      web.NewCRDApiHandler(&jobResHandler, jobResFacade, "jobRes"),
+			InfoHandler:        web.NewApiHandler(&infoHandler, "info"),
+			LoginHandler:       web.NewApiHandler(&loginHandler, "auth/login"),
+			SessionHandler:     web.NewApiHandler(&sessionHandler, "auth/session"),
+			RandomMediaHandler: web.NewApiHandler(&randomMediaHandler, "media/random"),
 		}
-		cfg := config.Config()
-		web.RegisterRoutes(g, streamHandler, hndlrs, cfg.ApiToken, cfg.Swagger)
+		web.RegisterRoutes(g, streamHandler, hndlrs, hCfg.ApiToken, hCfg.Swagger)
 		ll.Warn("starting server")
 		if err := g.Run(":8080"); err != nil {
 			logrus.WithError(err).Fatal("error running webserver")
