# docs/swagger.json
@@ -1,10 +1,64 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "title": "TGMon API",
+        "contact": {},
+        "version": "1.0"
     },
     "paths": {
-        "/api/info": {
+        "/api/auth/login/": {
+            "post": {
+                "description": "Authenticate user and return a token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "Login Data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/web.LoginPostReqType"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.LoginPostResType"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/session/": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Session data",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.LoginPostResType"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/info/": {
             "get": {
                 "security": [
                     {
@@ -25,7 +79,7 @@
                 }
             }
         },
-        "/api/jobReq": {
+        "/api/jobReq/": {
             "get": {
                 "security": [
                     {
@@ -50,9 +104,42 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "jobReq"
+                ],
+                "summary": "Create job request",
+                "parameters": [
+                    {
+                        "description": "Job Request Data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.JobReqDoc"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.JobReqDoc"
+                        }
+                    }
+                }
             }
         },
-        "/api/jobReq/{id}": {
+        "/api/jobReq/{id}/": {
             "delete": {
                 "security": [
                     {
@@ -85,7 +172,7 @@
                 }
             }
         },
-        "/api/jobRes": {
+        "/api/jobRes/": {
             "post": {
                 "security": [
                     {
@@ -109,7 +196,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/web.JobResPostReqType"
+                            "$ref": "#/definitions/types.JobResDoc"
                         }
                     }
                 ],
@@ -123,31 +210,7 @@
                 }
             }
         },
-        "/api/login": {
-            "post": {
-                "description": "Authenticate user and return a token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Login",
-                "parameters": [
-                    {
-                        "description": "Login Data",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/web.LoginPostReqType"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/api/media": {
+        "/api/media/": {
             "get": {
                 "security": [
                     {
@@ -173,16 +236,65 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/types.MediaFileDoc"
-                            }
+                            "$ref": "#/definitions/web.MediaListResType"
                         }
                     }
                 }
             }
         },
-        "/api/media/{id}": {
+        "/api/media/random/": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get random media",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.RandomMediaGetResType"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/media/{id}/": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "media"
+                ],
+                "summary": "Read media",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Media ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/web.MediaReadResType"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "security": [
                     {
@@ -217,22 +329,22 @@
         "types.JobReqDoc": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "CreatedAt": {
                     "type": "string"
                 },
-                "deletedAt": {
+                "DeletedAt": {
                     "type": "string"
                 },
-                "id": {
+                "ID": {
                     "type": "string"
                 },
-                "mediaID": {
+                "MediaID": {
                     "type": "string"
                 },
-                "type": {
+                "Type": {
                     "$ref": "#/definitions/types.JobTypeEnum"
                 },
-                "updatedAt": {
+                "UpdatedAt": {
                     "type": "string"
                 }
             }
@@ -240,34 +352,34 @@
         "types.JobResDoc": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "CreatedAt": {
                     "type": "string"
                 },
-                "deletedAt": {
+                "DeletedAt": {
                     "type": "string"
                 },
-                "id": {
+                "ID": {
                     "type": "string"
                 },
-                "jobReqID": {
+                "JobReqID": {
                     "type": "string"
                 },
-                "sprite": {
+                "Sprite": {
                     "type": "array",
                     "items": {
                         "type": "integer"
                     }
                 },
-                "thumbnail": {
+                "Thumbnail": {
                     "type": "array",
                     "items": {
                         "type": "integer"
                     }
                 },
-                "updatedAt": {
+                "UpdatedAt": {
                     "type": "string"
                 },
-                "vtt": {
+                "Vtt": {
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -289,31 +401,31 @@
         "types.MediaFileDoc": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "CreatedAt": {
                     "type": "string"
                 },
-                "deletedAt": {
+                "DeletedAt": {
                     "type": "string"
                 },
-                "id": {
+                "ID": {
                     "type": "string"
                 },
-                "messageID": {
+                "MessageID": {
                     "type": "integer"
                 },
-                "meta": {
+                "Meta": {
                     "$ref": "#/definitions/types.MediaFileMeta"
                 },
-                "sprite": {
+                "Sprite": {
                     "type": "string"
                 },
-                "thumbnail": {
+                "Thumbnail": {
                     "type": "string"
                 },
-                "updatedAt": {
+                "UpdatedAt": {
                     "type": "string"
                 },
-                "vtt": {
+                "Vtt": {
                     "type": "string"
                 }
             }
@@ -321,16 +433,19 @@
         "types.MediaFileMeta": {
             "type": "object",
             "properties": {
-                "fileID": {
+                "Duration": {
+                    "type": "number"
+                },
+                "FileID": {
                     "type": "integer"
                 },
-                "fileName": {
+                "FileName": {
                     "type": "string"
                 },
-                "fileSize": {
+                "FileSize": {
                     "type": "integer"
                 },
-                "mimeType": {
+                "MimeType": {
                     "type": "string"
                 }
             }
@@ -338,60 +453,66 @@
         "web.InfoGetResType": {
             "type": "object",
             "properties": {
-                "mediaCount": {
+                "MediaCount": {
                     "type": "integer"
-                }
-            }
-        },
-        "web.JobResPostReqType": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "jobReqID": {
-                    "type": "string"
-                },
-                "sprite": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "thumbnail": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "vtt": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
                 }
             }
         },
         "web.LoginPostReqType": {
             "type": "object",
             "required": [
-                "password",
-                "username"
+                "Password",
+                "Username"
             ],
             "properties": {
-                "password": {
+                "Password": {
                     "type": "string"
                 },
-                "username": {
+                "Username": {
+                    "type": "string"
+                }
+            }
+        },
+        "web.LoginPostResType": {
+            "type": "object",
+            "properties": {
+                "Token": {
+                    "type": "string"
+                }
+            }
+        },
+        "web.MediaListResType": {
+            "type": "object",
+            "properties": {
+                "Media": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.MediaFileDoc"
+                    }
+                },
+                "Total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "web.MediaReadResType": {
+            "type": "object",
+            "properties": {
+                "Media": {
+                    "$ref": "#/definitions/types.MediaFileDoc"
+                },
+                "nextID": {
+                    "type": "string"
+                },
+                "pervID": {
+                    "type": "string"
+                }
+            }
+        },
+        "web.RandomMediaGetResType": {
+            "type": "object",
+            "properties": {
+                "MediaID": {
                     "type": "string"
                 }
             }
