# internal/config/types.go
@@ -1,25 +1,27 @@
 package config
 
+type HttpConfigType struct {
+	UserName     string   `env:"USER_NAME,required"`
+	UserPass     string   `env:"USER_PASS,required"`
+	ApiToken     string   `env:"API_TOKEN,required"`
+	Swagger      bool     `env:"SWAGGER" envDefault:"false"`
+	CoresAllowed []string `env:"CORES_ALLOWED_ORIGINS"`
+}
 type ConfigType struct {
-	AppID             int      `env:"APP_ID,required"`
-	AppHash           string   `env:"APP_HASH,required"`
-	TGSocksProxy      string   `env:"TG_SOCKS_PROXY"`
-	BotToken          string   `env:"BOT_TOKEN,required"`
-	WorkerTokens      []string `env:"WORKER_TOKENS,notEmpty"`
-	WorkerCacheRoot   string   `env:"WORKER_CACHE_ROOT,required"`
-	SessionDir        string   `env:"SESSION_DIR" envDefault:"sessions"`
-	ChannelID         int64    `env:"CHANNEL_ID,required"`
-	StreamChunkSize   int64    `env:"STREAM_CHUNK_SIZE" envDefault:"1048576"`
-	LogLevel          string   `env:"LOG_LEVEL" envDefault:"warning"`
-	WorkerProfileFile string   `env:"WORKER_PROFILE_FILE"`
-
+	AppID           int            `env:"APP_ID,required"`
+	AppHash         string         `env:"APP_HASH,required"`
+	TGSocksProxy    string         `env:"TG_SOCKS_PROXY"`
+	BotToken        string         `env:"BOT_TOKEN,required"`
+	WorkerTokens    []string       `env:"WORKER_TOKENS,notEmpty"`
+	WorkerCacheRoot string         `env:"WORKER_CACHE_ROOT,required"`
+	SessionDir      string         `env:"SESSION_DIR" envDefault:"sessions"`
+	ChannelID       int64          `env:"CHANNEL_ID,required"`
+	StreamChunkSize int64          `env:"STREAM_CHUNK_SIZE" envDefault:"1048576"`
+	LogLevel        string         `env:"LOG_LEVEL" envDefault:"warning"`
+	HttpConfig      HttpConfigType `envPrefix:"HTTP_CONFIG__"`
 	// ...
-	UserName      string `env:"USER_NAME,required"`
-	UserPass      string `env:"USER_PASS,required"`
-	ApiToken      string `env:"API_TOKEN,required"`
-	Swagger       bool   `env:"SWAGGER" envDefault:"false"`
-	AccessLogFile string `env:"ACCESS_LOG_FILE"`
-	KeepDupFiles  bool   `env:"KEEP_DUP_FILE"`
+	WorkerProfileFile string `env:"WORKER_PROFILE_FILE"`
+	KeepDupFiles      bool   `env:"KEEP_DUP_FILE"`
 	// ...
 	MinioEndpoint  string `env:"MINIO_ENDPOINT,required"`
 	MinioAccessKey string `env:"MINIO_ACCESS_KEY,required"`
