# internal/web/crdHandlers.go
@@ -1,23 +1,32 @@
 package web
 
 import (
+	"context"
 	"fmt"
 
+	"github.com/amirdaaee/TGMon/internal/db"
+	"github.com/amirdaaee/TGMon/internal/log"
 	"github.com/amirdaaee/TGMon/internal/types"
+	"github.com/chenmingyong0423/go-mongox/v2/bsonx"
 	"github.com/chenmingyong0423/go-mongox/v2/builder/query"
 	"github.com/chenmingyong0423/go-mongox/v2/finder"
 	"github.com/gin-gonic/gin"
+	"github.com/sirupsen/logrus"
 	"go.mongodb.org/mongo-driver/v2/bson"
 )
 
 // Package api provides handler interfaces and implementations for API resource operations.
 type ICreateApiHandler[T any] interface {
 	BindCreateRequest(g *gin.Context) (*T, error)
-	MarshalCreateResponse(*T) any
+	MarshalCreateResponse(g *gin.Context, v *T) (any, error)
+}
+type IReadApiHandler[T any] interface {
+	BindReadRequest(g *gin.Context) (bson.D, error)
+	MarshalReadResponse(g *gin.Context, v *T) (any, error)
 }
 type IListApiHandler[T any] interface {
 	BindListRequest(g *gin.Context, fnd finder.IFinder[T]) (finder.IFinder[T], error)
-	MarshalListResponse([]*T) any
+	MarshalListResponse(g *gin.Context, v []*T) (any, error)
 }
 type IDeleteApiHandler[T any] interface {
 	BindDeleteRequest(g *gin.Context) (bson.D, error)
@@ -26,7 +35,9 @@ type IDeleteApiHandler[T any] interface {
 // IHandler defines methods for binding requests and marshaling responses for a resource type T.
 
 // MediaHandler implements IHandler for media resources.
-type MediaHandler struct{}
+type MediaHandler struct {
+	DBContainer db.IDbContainer
+}
 
 // JobReqHandler implements IHandler for media resources.
 type JobReqHandler struct{}
@@ -34,19 +45,59 @@ type JobReqHandler struct{}
 // JobResHandler implements IHandler for media resources.
 type JobResHandler struct{}
 
+var _ IReadApiHandler[types.MediaFileDoc] = (*MediaHandler)(nil)
 var _ IListApiHandler[types.MediaFileDoc] = (*MediaHandler)(nil)
 var _ IDeleteApiHandler[types.MediaFileDoc] = (*MediaHandler)(nil)
+
+var _ ICreateApiHandler[types.JobReqDoc] = (*JobReqHandler)(nil)
 var _ IListApiHandler[types.JobReqDoc] = (*JobReqHandler)(nil)
 var _ IDeleteApiHandler[types.JobReqDoc] = (*JobReqHandler)(nil)
+
 var _ ICreateApiHandler[types.JobResDoc] = (*JobResHandler)(nil)
 
 // =====
+// @Summary	Read media
+// @Tags		media
+// @Produce	json
+// @Param		id	path	string	true	"Media ID"
+// @Success	200	{object}	MediaReadResType
+// @Router		/api/media/{id}/ [get]
+// @Security	ApiKeyAuth
+func (h *MediaHandler) BindReadRequest(g *gin.Context) (bson.D, error) {
+	var qID MediaReadReqType
+	if err := g.ShouldBindUri(&qID); err != nil {
+		return nil, err
+	}
+	idObj, err := bson.ObjectIDFromHex(qID.ID)
+	if err != nil {
+		return nil, fmt.Errorf("invalid id: %w", err)
+	}
+	q := query.Id(idObj)
+	return q, nil
+}
+func (h *MediaHandler) MarshalReadResponse(g *gin.Context, v *types.MediaFileDoc) (any, error) {
+	ll := h.getLogger("MarshalReadResponse")
+	prevDocID, err := h.getNeighborsId(g.Request.Context(), v, query.NewBuilder().Lt, -1)
+	if err != nil {
+		ll.WithError(err).Error("error finding previous document")
+	}
+	nextDocID, err := h.getNeighborsId(g.Request.Context(), v, query.NewBuilder().Gt, 1)
+	if err != nil {
+		ll.WithError(err).Error("error finding previous document")
+	}
+	return MediaReadResType{
+		Media:  v,
+		PervID: prevDocID,
+		NextID: nextDocID,
+	}, nil
+}
+
 // @Summary	List media
 // @Tags		media
 // @Produce	json
 // @Param		page	query	int	false	"page"
-// @Success	200		{array}	types.MediaFileDoc
-// @Router		/api/media [get]
+// @Success	200		{object}	MediaListResType
+// @Router		/api/media/ [get]
 // @Security	ApiKeyAuth
 func (h *MediaHandler) BindListRequest(g *gin.Context, fnd finder.IFinder[types.MediaFileDoc]) (finder.IFinder[types.MediaFileDoc], error) {
 	var v MediaListReqType
@@ -63,7 +114,7 @@ func (h *MediaHandler) BindListRequest(g *gin.Context, fnd finder.IFinder[types.
 // @Produce	json
 // @Param		id	path	string	true	"Media ID"
 // @Success	200
-// @Router		/api/media/{id} [delete]
+// @Router		/api/media/{id}/ [delete]
 // @Security	ApiKeyAuth
 func (h *MediaHandler) BindDeleteRequest(g *gin.Context) (bson.D, error) {
 	var qID MediaDelReqType
@@ -77,21 +128,61 @@ func (h *MediaHandler) BindDeleteRequest(g *gin.Context) (bson.D, error) {
 	q := query.Id(idObj)
 	return q, nil
 }
-func (h *MediaHandler) MarshalListResponse(v []*types.MediaFileDoc) any {
+func (h *MediaHandler) MarshalListResponse(g *gin.Context, v []*types.MediaFileDoc) (any, error) {
 	res := make([]*types.MediaFileDoc, len(v))
 	for i, doc := range v {
 		_v := types.MediaFileDoc(*doc)
 		res[i] = &_v
 	}
-	return MediaListResType(res)
+	total, err := h.DBContainer.GetMongoContainer().GetMediaFileCollection().Finder().Count(g.Request.Context())
+	if err != nil {
+		return nil, fmt.Errorf("error counting media: %w", err)
+	}
+	return MediaListResType{
+		Media: res,
+		Total: total,
+	}, nil
+}
+func (h *MediaHandler) getLogger(fn string) *logrus.Entry {
+	return log.GetLogger(log.WebModule).WithField("func", fmt.Sprintf("%T.%s", h, fn))
+}
+func (h *MediaHandler) getNeighborsId(ctx context.Context, v *types.MediaFileDoc, qFactory func(string, any) *query.Builder, sort int) (*bson.ObjectID, error) {
+	fnd := h.DBContainer.GetMongoContainer().GetMediaFileCollection().Finder()
+	createdAtField := "created_at"
+	filter := qFactory(createdAtField, v.CreatedAt).Build()
+	srt := bsonx.NewD().Add(createdAtField, sort).Build()
+	h.getLogger("getNeighbors").Infof("getting neighbors filter: %+v - sort: %+v", filter, srt)
+	doc, err := fnd.Filter(filter).Sort(srt).FindOne(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("error finding document: %w", err)
+	}
+	return &doc.ID, nil
 }
 
 // =====
+// @Summary	Create job request
+// @Tags		jobReq
+// @Produce	json
+// @Param		data	body		types.JobReqDoc	true	"Job Request Data"
+// @Success	200	{object}	types.JobReqDoc
+// @Router		/api/jobReq/ [post]
+// @Security	ApiKeyAuth
+func (h *JobReqHandler) BindCreateRequest(g *gin.Context) (*types.JobReqDoc, error) {
+	var v types.JobReqDoc
+	if err := g.ShouldBindJSON(&v); err != nil {
+		return nil, err
+	}
+	return &v, nil
+}
+func (h *JobReqHandler) MarshalCreateResponse(g *gin.Context, v *types.JobReqDoc) (any, error) {
+	return v, nil
+}
+
 // @Summary	List job requests
 // @Tags		jobReq
 // @Produce	json
 // @Success	200	{array}	types.JobReqDoc
-// @Router		/api/jobReq [get]
+// @Router		/api/jobReq/ [get]
 // @Security	ApiKeyAuth
 func (h *JobReqHandler) BindListRequest(g *gin.Context, fnd finder.IFinder[types.JobReqDoc]) (finder.IFinder[types.JobReqDoc], error) {
 	return fnd, nil
@@ -102,7 +193,7 @@ func (h *JobReqHandler) BindListRequest(g *gin.Context, fnd finder.IFinder[types
 // @Produce	json
 // @Param		id	path		string	true	"Job Request ID"
 // @Success	200	{string}	string	"OK"
-// @Router		/api/jobReq/{id} [delete]
+// @Router		/api/jobReq/{id}/ [delete]
 // @Security	ApiKeyAuth
 func (h *JobReqHandler) BindDeleteRequest(g *gin.Context) (bson.D, error) {
 	var qID JobReqDelReqType
@@ -116,13 +207,13 @@ func (h *JobReqHandler) BindDeleteRequest(g *gin.Context) (bson.D, error) {
 	q := query.Id(idObj)
 	return q, nil
 }
-func (h *JobReqHandler) MarshalListResponse(v []*types.JobReqDoc) any {
+func (h *JobReqHandler) MarshalListResponse(g *gin.Context, v []*types.JobReqDoc) (any, error) {
 	res := make([]*types.JobReqDoc, len(v))
 	for i, doc := range v {
 		_v := types.JobReqDoc(*doc)
 		res[i] = &_v
 	}
-	return JobReqListResType(res)
+	return JobReqListResType(res), nil
 }
 
 // =====
@@ -131,17 +222,17 @@ func (h *JobReqHandler) MarshalListResponse(v []*types.JobReqDoc) any {
 //	@Tags		jobRes
 //	@Accept		json
 //	@Produce	json
-//	@Param		data	body		JobResPostReqType	true	"Job Response Data"
+//	@Param		data	body		types.JobResDoc	true	"Job Response Data"
 //	@Success	200		{object}	types.JobResDoc
-//	@Router		/api/jobRes [post]
+//	@Router		/api/jobRes/ [post]
 //	@Security	ApiKeyAuth
 func (h *JobResHandler) BindCreateRequest(g *gin.Context) (*types.JobResDoc, error) {
-	var v JobResPostReqType
+	var v types.JobResDoc
 	if err := g.ShouldBindJSON(&v); err != nil {
 		return nil, err
 	}
-	return v, nil
+	return &v, nil
 }
-func (h *JobResHandler) MarshalCreateResponse(v *types.JobResDoc) any {
-	return v
+func (h *JobResHandler) MarshalCreateResponse(g *gin.Context, v *types.JobResDoc) (any, error) {
+	return v, nil
 }
